--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -1,5 +1,5 @@
-<div class="index">
-	<div class="header">
+<div class="login">
+	<div class="login-header">
 		<a class="main-logo" href="/">
 			<img src="/static/img/logo.svg"/>
 		</a>
