--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -1,9 +1,5 @@
 <div class="index">
-	<div class="header">
-		<a class="main-logo" href="/">
-			<img src="/static/img/logo.svg"/>
-		</a>
-	</div>
+	<p class="disclaimer">Search any historical character you want.<br/>We have them all!</p>
 
 	<form class="search-form" ng-submit="submitSearchForm()">
 		<div class="languages">
