--- a/static/style/style.css
+++ b/static/style/style.css
@@ -440,18 +440,20 @@ body {
       vertical-align: top;
       width: 100%;
       height: auto;
-      font-size: 0; }
+      font-size: 0;
+      padding: 1vh 0 2vh; }
       .pills .preview .preview-header .info {
         display: inline-block;
         vertical-align: top;
         width: 100%;
         height: auto;
-        padding: 1vh 0;
         font-size: 16px; }
         .pills .preview .preview-header .info h1 {
           line-height: 40px;
           font-weight: 400;
           padding: 2vh 0; }
+        .pills .preview .preview-header .info p {
+          width: 50%; }
     .pills .preview .preview-table {
       display: inline-block;
       vertical-align: top;
