--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -11,7 +11,7 @@
 				<i class="fa fa-angle-down"></i>
 			</span>
 			<ul class="menu" ng-show="toggleMenu">
-				<li><a href="#"><i class="fa fa-sign-out"></i> Logout</a></li>
+				<li><a href="#" ng-click="logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
 			</ul>
 		</div>
 	</div>
