--- a/static/style/style.css
+++ b/static/style/style.css
@@ -401,16 +401,14 @@ body {
           height: 24px; }
     .index .search-form .results, .index .login-form .results {
       position: absolute;
-      top: 100px;
-      left: 0;
-      display: inline-block;
+      display: block;
+      margin-top: -1px;
       vertical-align: top;
       width: 67%;
       height: auto;
       max-height: 150px;
       overflow-y: auto;
-      border: 1px solid #ccc;
-      border-top: none;
+      border: 1px solid #dddddd;
       z-index: 1; }
       .index .search-form .results .item, .index .login-form .results .item {
         display: inline-block;
