--- a/templates/designs/bl4ck.html
+++ b/templates/designs/bl4ck.html
@@ -49,7 +49,7 @@
 		</script>
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	</head>
-	<body style="background-image: url('{{ picture }}')">
+	<body {% if picture %}style="background-image: url('{{ picture }}')"{% endif %}>
 		<div class="wrapper">
 			<div class="addthis_inline_share_toolbox"></div>
 		</div>
