--- a/static/style/style.css
+++ b/static/style/style.css
@@ -88,7 +88,7 @@ body {
   .header .main-logo {
     display: inline-block;
     vertical-align: top;
-    width: 50%;
+    width: 33.33%;
     height: 40px;
     padding: 5px 0; }
     .header .main-logo img {
@@ -96,11 +96,34 @@ body {
       vertical-align: top;
       width: auto;
       height: 30px; }
+  .header .feedback {
+    display: inline-block;
+    vertical-align: top;
+    width: 33.33%;
+    height: 40px;
+    padding: 5px 0;
+    text-align: center; }
+    .header .feedback .button {
+      display: inline-block;
+      vertical-align: top;
+      width: auto;
+      heiight: auto;
+      padding: 5px 15px;
+      color: #ccc;
+      background: transparent;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      font-size: .8em;
+      line-height: 20px;
+      transition: all .2s ease-in-out; }
+      .header .feedback .button:hover, .header .feedback .button:active {
+        color: white;
+        border-color: white; }
   .header .usermenu {
     display: inline-block;
     vertical-align: top;
     position: relative;
-    width: 50%;
+    width: 33.33%;
     height: 40px;
     text-align: right; }
     .header .usermenu .picture {
