--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -99,7 +99,7 @@ body {
 	.main-logo {
 		display: inline-block;
 		vertical-align: top;
-		width: 50%;
+		width: 33.33%;
 		height: 40px;
 		padding: 5px 0;
 		img {
@@ -110,11 +110,39 @@ body {
 		}
 	}
 
+	.feedback {
+		display: inline-block;
+		vertical-align: top;
+		width: 33.33%;
+		height: 40px;
+		padding: 5px 0;
+		text-align: center;
+
+		.button {
+			display: inline-block;
+			vertical-align: top;
+			width: auto;
+			heiight: auto;
+			padding: 5px 15px;
+			color: #ccc;
+			background: transparent;
+			border: 1px solid #ccc;
+			border-radius: 3px;
+			font-size: .8em;
+			line-height: 20px;
+			transition: all .2s ease-in-out;
+			&:hover, &:active {
+				color: white;
+				border-color: white;
+			}
+		}
+	}
+
 	.usermenu {
 		display: inline-block;
 		vertical-align: top;
 		position: relative;
-		width: 50%;
+		width: 33.33%;
 		height: 40px;
 		text-align: right;
 		.picture {
