--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -1,9 +1,9 @@
 <div class="index">
-	<p class="disclaimer">Search any historical character you want.<br/>We have them all!</p>
+	<p class="disclaimer">Search any dead historical figure you want.<br/>We have them all!</p>
 
 	<form class="search-form" ng-submit="submitSearchForm()">
 
-		<input type="text" class="query" name="query" ng-model="query" placeholder="Search a historical character..." autocomplete="off"/>
+		<input type="text" class="query" name="query" ng-model="query" placeholder="Search..." autocomplete="off"/>
 		<button class="button" type="submit">
 			<span class="icon">
 				<i class="fa fa-search"></i>
