--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,14 @@
 		<!--facebook-->
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Thejuice">
-        <meta property="og:description" content="TheJuice History. Crea infografías de cualquier personaje histórico en menos de un minuto">
-        <meta property="og:image" content="http://takethejuice.com/assets/images/thumbnail-history.png">
+        <meta property="og:description" content="TheJuice History. The juice helps teachers translate their knowledge into a language students understand">
+        <meta property="og:image" content="/static/img/logo.png">
         <meta property="og:url" content="http://takethejuice.com/es/">
 
         <!--twitter-->
         <meta name="twitter:title" content="TheJuice">
-        <meta name="twitter:description" content="TheJuice History. Crea infografías de cualquier personaje histórico en menos de un minuto">
-        <meta name="twitter:image" content="http://takethejuice.com/assets/images/thumbnail-history.png">
+        <meta name="twitter:description" content="TheJuice History. The juice helps teachers translate their knowledge into a language students understand">
+        <meta name="twitter:image" content="/static/img/logo.png">
         <meta name="twitter:card" content="summary_large_image">
 
         <PageMap>
