--- a/static/style/templates/bl4ck.css
+++ b/static/style/templates/bl4ck.css
@@ -20,7 +20,16 @@ body {
 	color: white;
 }
 
-html:before {
+.background {
+	position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.background:before {
 	content: '';
 	position: fixed;
 	top: 0; left: 0;
