--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -578,7 +578,21 @@ body {
 					font-size: small;
 					border-right: 1px solid #ddd;
 					&.date {width: 15%;}
-					&.content {width: 50%;}
+
+					&.content {
+						width: 50%;
+						.answers {
+							width: 100%;
+							margin: 1em 0 .5em;
+							.answer {
+								display: inline-block;
+								width: 25%;
+								&.correct {
+									color: #2ecc71;
+								}
+							}
+					    }
+					}
 					&.media {
 						width: 10%;
 						text-align: center;
