--- a/static/style/style.css
+++ b/static/style/style.css
@@ -579,7 +579,7 @@ body {
       box-shadow: 0 5px 10px -5px #000;
       font-size: 0; }
       .pills .edit-popup .edit-form input, .pills .edit-popup .edit-form textarea {
-        display: inline-block;
+        display: block;
         vertical-align: top;
         padding: 1vh 1vw;
         font-family: 'Raleway';
@@ -589,21 +589,16 @@ body {
         outline: none;
         box-sizing: border-box;
         box-shadow: 0px 5px 3px #f2f2f2;
-        border: 1px solid #ccc; }
-      .pills .edit-popup .edit-form .date {
-        display: inline-block;
-        vertical-align: top;
+        border: 1px solid #ccc;
         width: 100%;
-        height: auto;
-        font-size: 0;
         margin: 1vh 0; }
-        .pills .edit-popup .edit-form .date input {
-          width: 30%;
-          margin: 1vh 1.5%; }
       .pills .edit-popup .edit-form textarea {
-        width: 100%;
-        margin: 1vh 0;
-        min-height: 200px; }
+        max-width: 100%;
+        min-height: 100px; }
+      .pills .edit-popup .edit-form .answers {
+        margin-top: 2vh;
+        border-top: 1px solid rgba(0, 0, 0, 0.4);
+        padding-top: 1vh; }
       .pills .edit-popup .edit-form button {
         display: inline-block;
         vertical-align: top;
