--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -703,6 +703,10 @@ body {
 				min-height: 100px;
 			}
 
+			h3 {
+				font-size: medium;
+			}
+
 			.answers {
 				margin-top: 2vh;
 				border-top: 1px solid rgba(0, 0, 0, 0.4);
