--- a/static/style/templates/default.css
+++ b/static/style/templates/default.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Abril+Fatface");
 * {
   margin: 0;
@@ -128,6 +128,41 @@ body {
     .questions .question .content {
       max-width: 1024px;
       margin: auto; }
+
+.submit {
+  margin: 3% auto;
+  width: 50%;
+  min-width: 300px;
+  max-width: 1024px;
+  font-size: 20px;
+  text-align: right; }
+  .submit p {
+    margin: 1% 0;
+    text-align: left; }
+  .submit input {
+    display: block;
+    font-size: 30px;
+    width: 100%;
+    margin: 2% auto;
+    padding: 3%;
+    border-radius: 5px;
+    border: 2px solid #0085AC;
+    font-weight: 200;
+    transition: .3s ease-in-out; }
+    .submit input:focus {
+      outline: none;
+      box-shadow: 0px 5px 7px -5px #0085AC; }
+  .submit button {
+    padding: 3% 5%;
+    color: white;
+    background-color: #0085AC;
+    font-size: 30px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; }
+    .submit button:hover {
+      background-color: #007b9f; }
 
 @media (max-width: 500px) {
   .header .image {
