--- a/static/style/templates/default.scss
+++ b/static/style/templates/default.scss
@@ -70,8 +70,7 @@ body {
 		height: auto;
 		margin: 15px 0 10px;
 		padding: 5px 10px;
-		background: #0085AC;
-		color: white;
+		color: black;
 		font-size: 20px;
 	}
 }
@@ -183,7 +182,7 @@ body {
 }
 
 .submit {
-	margin: 3% auto;
+	margin: 10vh auto;
 	width: 50%;
 	min-width: 300px;
 	max-width: 1024px;
