Add error field

--- a/static/style/templates/default.css
+++ b/static/style/templates/default.css
@@ -132,7 +132,7 @@ body {
       margin: auto; }
 
 .submit {
-  margin: 10vh auto;
+  margin: 15vh auto;
   width: 50%;
   min-width: 300px;
   max-width: 1024px;
@@ -165,6 +165,12 @@ body {
     cursor: pointer; }
     .submit button:hover {
       background-color: #007b9f; }
+  .submit .error {
+    background-color: rgba(228, 4, 4, 0.8);
+    padding: 1vh 2vh;
+    margin: 2vh 0 0;
+    border-radius: 5px;
+    color: white; }
 
 @media (max-width: 500px) {
   .header .image {
