--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -84,6 +84,7 @@
 
 			<div class="submit">
 				<p>Introduce your email so we can send you the results of your test :)</p>
+				<p class="error" style="display: none;"></p>
 				<input type="email" name="email" id="email" placeholder="email">
 				<button>Send</button>
 			</div>
