--- a/static/style/templates/default.scss
+++ b/static/style/templates/default.scss
@@ -197,8 +197,8 @@ body {
 		display: block;
 		font-size: 30px;
 		width: 100%;
-		margin: 2% auto;
-		padding: 3%;
+		margin: 1vh auto;
+		padding: 2vh 2vw;
 		border-radius: 5px;
 		border: 2px solid #0085AC;
 		font-weight: 200;
@@ -223,12 +223,21 @@ body {
 			background-color: #007b9f;
 		}
 	}
-	.error {
-		background-color: rgba(228, 4, 4, 0.8);
-		padding: 1vh 2vh;
-		margin: 2vh 0 0;
-		border-radius: 5px;
-		color: white;
+}
+
+
+.error {
+	background-color: rgba(228, 4, 4, 0.8);
+	padding: 1vh 0;
+	margin: 2vh 0 0;
+	border-radius: 5px;
+	color: white;
+	text-align: left;
+
+	li {
+		display: block;
+		list-style: none;
+		padding: 1vh 2vw;
 	}
 }
 
