--- a/static/style/templates/default.scss
+++ b/static/style/templates/default.scss
@@ -141,16 +141,17 @@ body {
 			}
 		}
 		.text {
-			margin: 1% 5%;
+			margin: 1vh 5vw;
 		}
 		.answers {
-			margin: 5% 0;
+			margin: 5vh 0;
 			display: block;
+			font-size: 25px;
 
 			div {
 				display: inline-block;
 				width: 22%;
-				margin: 0 1%;
+				margin: .5vh 1vw;
 
 				.answer {
 					padding: 1.5vh 1vw;
@@ -206,7 +207,7 @@ body {
 
 		&:focus {
 			outline: none;
-			box-shadow: 0px 5px 7px -5px #0085AC;
+			box-shadow: 0 5px 7px -5px #0085AC;
 		}
 	}
 	button {
@@ -241,19 +242,27 @@ body {
 	}
 }
 
-@media (max-width : 500px) {
-	.header .image {
-		width: 150px;
-		margin: 0;
-	}
+// desktop
 
+// tablet
+@media (max-width : 768px) {
+	.questions .question .answers div {
+		width: 47%;
+	}
+}
+
+// mobile
+@media (max-width : 576px) {
 	.header .text {
-		display: block;
-		width: auto;
-		max-width: none;
-		margin: 20px 0 0;
+		font-size: 30px;
+	}
+	.questions .question {
 		font-size: 25px;
-		line-height: 45px;
-		text-align: center;
+
+		.answers div {
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 }
