No more murders

--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -11,7 +11,11 @@
 			Search
 		</button>
 
-		<autosuggestions query="query" lang="lang" callback="submitSearchForm(name)"></autosuggestions>
+		<!--<autosuggestions query="query" lang="lang" callback="submitSearchForm(name)"></autosuggestions>-->
+
+		<ul class='results ng-hide' ng-show='results'>
+			<li class='item' ng-repeat='result in results' ng-click="reviewPage(result.id)">{{result.name}}</li>
+		</ul>
 
 		<div class="languages" ng-hide="query">
 			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
