--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{ title }} - TheJuice</title>
+		<title>{{ name }} - TheJuice</title>
 		<link rel="stylesheet" href="/static/style/templates/default.css"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,13 +27,13 @@
 
         <!--facebook-->
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="{{ title }} - TheJuice">
+        <meta property="og:title" content="{{ name }} - TheJuice">
         <meta property="og:description" content="Translating teachers knowledge to fit into pupils social media">
         <meta property="og:image" content="{{ picture }}">
         <meta property="og:url" content="http://history.takethejuice.com/">
 
         <!--twitter-->
-        <meta name="twitter:title" content="{{ title }} - TheJuice">
+        <meta name="twitter:title" content="{{ name }} - TheJuice">
         <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
         <meta name="twitter:image" content="{{ picture }}">
         <meta name="twitter:card" content="summary_large_image">
@@ -47,7 +47,7 @@
 
 			ga('create', 'UA-92654268-2', 'auto');
 			ga('send', 'pageview');
-			ga('send', 'event', 'output', 'infographic', '{{ title }}');
+			ga('send', 'event', 'output', 'infographic', '{{ name }}');
 		</script>
 	</head>
 	<body>
@@ -62,10 +62,10 @@
 				{% else %}
 					<div class="text">
 				{% endif %}
-						{% set name = title.split(" ") %}
+						{% set name = name.split(" ") %}
 						<h1 class="name">{{ name[0] }}</h1>
 						<h1 class="surname">{{ " ".join(name[1:]) }}</h1>
-						<span class="date">{{ limits.start }} - {{ limits.end }}</span>
+						<span class="date">{{ limits.start }} - {{ limits.end  or "Present" }}</span>
 					</div>
 			</div>
 
